# kakoidb

./: .travis.yml  Cargo.toml  DefaultSettings.toml  DockerSettings.toml  Dockerfile
src/: api.rs  database.rs  janitor.rs  main.rs  series.rs
src/entities/: aggregation.rs  duration.rs  mod.rs  point.rs  series.rs
