[package]
name = "kakoidb"
version = "0.1.0"
authors = ["Rasmus Eneman <rasmus.eneman@learningwell.se>"]

[dependencies]
rocksdb = "0.10.1"
juniper = "0.10"
warp = "0.1.9"
juniper_warp =  "0.1.0"
log = "0.4.6"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = "0.1"
tokio-timer = "0.2"
config = "0.9"
simplelog = "^0.5.0"
atty = "0.2"