[package]
name = "kakoidb"
version = "0.1.0"
authors = ["Rasmus Eneman <rasmus.eneman@learningwell.se>"]
edition = "2018"

[dependencies]
rocksdb = "0.12.2"
juniper = "0.12"
warp = "0.1.15"
juniper_warp =  "0.3.0"
log = "0.4.6"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.1.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = "0.1"
tokio-timer = "0.2"
config = "0.9"
simplelog = "0.5"
atty = "0.2"

[dev-dependencies]
tempdir = "0.3.7"